--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -1,55 +1,56 @@
-<mat-toolbar color="primary">
-  
-  <button mat-button (click)="sidenav.open()" ><mat-icon>menu</mat-icon></button>
-  <input type='text' value='Type your text'>  
-  <button mat-button (click)="newFilter()">Filter</button>
-  <span class="example-spacer"></span>
-  
-  <button mat-button [matMenuTriggerFor]="appMenu"><mat-icon>settings</mat-icon></button>
-  
-</mat-toolbar>
-
-
-<mat-menu #appMenu="matMenu">
-  <button mat-menu-item> Add article </button>
-  <button mat-menu-item> Only created by me </button>
-</mat-menu>
-
-
 
 <mat-sidenav-container class="example-container">
-  
-<!--  <mat-sidenav #sidenav class="example-sidenav">
-    <mat-list class="list-nav">
-        <mat-list-item class="list-item" *ngFor="let source of mSources" (click)="searchArticles(source.id);sidenav.close();">
-          
-          <div mat-card-avatar [ngStyle]="{'background-image': 'url(../assets/images/'+ source.id +'.png)'}" class="example-header-image"></div>
-          
-          <span class="source-name"> {{source.name}}</span>
-        
-        </mat-list-item>
-    </mat-list>
-  </mat-sidenav>-->
-  
-
-  <mat-card class="example-card" >
-    <mat-card-header>
-     
-	 <h1>Edit article</h1>
-    </mat-card-header>
-    <mat-card-content>
-     <p>Headling </p> <p><input type="text"></p>
-	 <p>Short description</p> <p> <input type="text"></p>
-	 <p>Content</p> <p> <textarea></textarea></p>
-	  <p>Image</p> <p> <input type="file"></p>
-	  <p>Date</p> <p> <input type="text"></p>
-	  <p>Auhtor</p> <p> <input type="text"></p>
-	  <p>Source url</p> <p> <input type="text"></p>
+	<mat-card class="example-card" >
+		<mat-card-header>
+			<h1>Edit article</h1>
+			</mat-card-header>
+			<mat-card-content>
+			
+				<form [formGroup]="myForm" novalidate (ngSubmit)="editNews()">
+		
+                    <div class="form-group">
+                        <p>Headling</p>
+                        <input   class="form-control" name="headling"  formControlName="headling" />
+                         
+                        <div class="alert alert-danger"
+                            *ngIf="myForm.controls['headling'].invalid && myForm.controls['headling'].touched">
+                            The field must not be empty
+                        </div>
+                    </div>
+					<div class="form-group">
+                        <p>Short description</p>
+                        <input class="form-control" name="shortDescription"   formControlName="shortDescription" />
+                        <div class="alert alert-danger"
+                            *ngIf="myForm.controls['shortDescription'].invalid && myForm.controls['shortDescription'].touched">
+                            The field must not be empty
+                        </div>
+                    </div>
+					 <div class="form-group">
+                        <p>Content</p>
+						<textarea class="form-control" name="content" formControlName="content"> </textarea>
+                    </div>
+                    <!--<div class="form-group">
+                        <p>Image</p>
+						<input type='file' class="form-control" class="form-control" name="image" formControlName="image" >
+                    </div>-->
+					<div class="form-group">
+                        <p>Date</p>
+						<input class="form-control"class="form-control" name="date" formControlName="date"  >
+                    </div>
+                    <div class="form-group">
+                        <p>Auhtor</p>
+						<input class="form-control" class="form-control" name="auhtor" formControlName="auhtor" >
+                    </div>
+                    <div class="form-group">
+						<mat-card-actions class="action-buttons">
+                        <button mat-button color="primary" [disabled]="myForm.invalid">
+                            Save
+                        </button>
+						</mat-card-actions>
+                    </div>
+            </form>
     </mat-card-content>
-    <mat-card-actions class="action-buttons">
-     <button mat-button color="primary">Save</button>
-      <button mat-button color="primary">Cancel</button>
-    </mat-card-actions>
+
   </mat-card>
 <mat-toolbar color="primary">
     <div >Powered by  <a href="https://newsapi.org" class="eco_color5">NEWS API</a> </div>
